--- a/Chelsie's Website/templates/home.html
+++ b/Chelsie's Website/templates/home.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Home Page - CN{% endblock %}</title>
         {#        <link rel="icon" href="https://cdn4.iconfinder.com/data/icons/new-google-logo-2015/400/new-google-favicon-512.png">#}
-        <script type="text/javascript" src="{{ url_for('static', filename='validation.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='script.js') }}"></script>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename ='stylesheet.css') }}">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
               integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
