--- a/Chelsie's Website/templates/login.html
+++ b/Chelsie's Website/templates/login.html
@@ -9,17 +9,23 @@
         <div class="container-lg mx-auto d-block">
             <form class="card-body form-responsive" method="post">
                 {{ form.hidden_tag() }}
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        {% for category, message in messages %}
+                            <div style="color: {{ category }}" class="text-center">{{ message }}</div><br>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fas fa-user"></i></span>
                     </div>
-                    {{ form.username(size=32, class="form-control", placeholder="Username") }}
-
+                    {{ form.username(class="form-control", placeholder="Username") }}
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-lock"></i></span>
                         </div>
-                        {{ form.password(size=32, class="form-control", placeholder="Password") }}
+                        {{ form.password(class="form-control", placeholder="Password") }}
                     </div>
                     <div class="input-group"><a href="/signup">Don't have a username yet?</a></div>
                     {{ form.submit(id="submitLogin",class="btn btn-dark mx-auto d-block", value="Log In") }}
