--- a/Chelsie's Website/templates/media.html
+++ b/Chelsie's Website/templates/media.html
@@ -1,5 +1,6 @@
 {% extends "home.html" %}
 {% block title %} Media - CN {% endblock %}
+<script type="text/javascript" src="{{ url_for('static', filename='mediaAPI.js') }}"></script>
 {% block content %}
     <div class="container py-5 container-lg mx-auto d-block">
         <div class="display-3 text-center"><img class="img-responsive" src="/static/images/media.png"> Media</div>
