--- a/Chelsie's Website/templates/justForFun.html
+++ b/Chelsie's Website/templates/justForFun.html
@@ -35,7 +35,7 @@
                                     <li>{{ item.post }}</li>
                                 </h4>
 
-                                <div class="container" style="display:none">
+                                <div class="container" id="display" style="display:none">
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-striped progress-bar-animated"
                                              style="width:40%">I have
@@ -47,13 +47,9 @@
                                     <br>
                                 </div>
                                 <div class="container container-lg">
-                                    <button type="button" id="have"
-                                            class="btn btn-large btn-outline-primary text-center">I
-                                        have
-                                    </button>
-                                    <button type="button" id="have_not"
-                                            class="btn btn-large btn-outline-success text-center">I have not
-                                    </button>
+                                    {{ form1.hidden_tag() }}
+                                    {{ form1.have_btn(type="button", id="have", class="btn btn-large btn-outline-primary text-center", value="I Have") }}
+                                    {{ form1.have_not_btn(ype="button", id="have_not", class="btn btn-large btn-outline-success text-center", value="I Have Not") }}
                                 </div>
                             </div>
                         </div>
