Never have I ever game

--- a/Chelsie's Website/templates/justForFun.html
+++ b/Chelsie's Website/templates/justForFun.html
@@ -15,7 +15,6 @@
         </ul>
         <div class="tab-content">
             <div class="tab-pane bg-white fade show active" id="play">
-
                 <div>
                     {% with messages = get_flashed_messages(with_categories=true) %}
                         {% if messages %}
@@ -30,43 +29,41 @@
                     {% for item in values | reverse %}
                         <div class="card" style="border: none">
                             <div class="card-body">
-
                                 <h4 class="card-title">
                                     <li>{{ item.post }}</li>
                                 </h4>
-
-                                <div class="container" id="display" style="display:none">
+                                <div class="container" id="display" style="display:{{ item.display }}">
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-striped progress-bar-animated"
-                                             style="width:40%">I have
+                                             style="width:{{ item.havePercentage }}%">I have
                                         </div>
                                         <div class="progress-bar bg-success progress-bar-striped progress-bar-animated"
-                                             style="width:60%">I haven't
+                                             style="width:{{ item.haveNotPercentage }}%">I haven't
                                         </div>
                                     </div>
                                     <br>
                                 </div>
-                                <div class="container container-lg">
+                                <form class="form-responsive" action="" method="post">
                                     {{ form1.hidden_tag() }}
-                                    {{ form1.have_btn(type="button", id="have", class="btn btn-large btn-outline-primary text-center", value="I Have") }}
-                                    {{ form1.have_not_btn(ype="button", id="have_not", class="btn btn-large btn-outline-success text-center", value="I Have Not") }}
-                                </div>
+                                    {{ form1.play_post(style="display:none", id="playpost",type="text", value = item.post) }}
+                                    {{ form1.have_btn(type="submit",id="have", class="btn btn-large btn-outline-primary text-center", value="I Have", onclick="disableButton()", disabled=item.disable) }}
+                                    {{ form1.have_not_btn(type="submit",id="have_not",class="btn btn-large btn-outline-success text-center", value="I Have Not", onclick="disableButton()", disabled= item.disable ) }}
+                                </form>
                             </div>
                         </div>
                         <hr>
                     {% endfor %}
                 </ul>
-
             </div>
             <div class="tab-pane bg-white fade" id="create">
                 <div class="media border p-3">
-                    <img src="/static/images/anonymous.png" alt="John Doe" class="mr-3 mt-2 ">
+                    <img src="/static/images/anonymous.png" class="mr-3 mt-2 ">
                     <div class="media-body">
                         <h5>Anonymous</h5>
                         <form class="form-responsive" action="" method="post">
                             <div class="container">
                                 {{ form.hidden_tag() }}
-                                {{ form.post(class="form-control bg-light", rows="5", id="write", placeholder="Write something", onchange="validatePost()") }}
+                                {{ form.post(class="form-control bg-light", rows="5", id="write", placeholder="Write something", onkeydown="validatePost()") }}
                                 <div class="invalid-feedback">You should start with "Never have I ever"</div>
                                 {{ form.post_submit( type="submit", id="post", value="Post" ,class="btn btn-dark", disabled=True) }}
                             </div>
@@ -78,7 +75,34 @@
         </div>
     {% else %}
         <div class="container py-5 container-lg mx-auto d-block">
-            <div class="display-3 text-center"> Haha, don't forget to log in first..
+        <div class="display-3 text-center">Never Have I ever..
+        </div>
+        <ul class="nav nav-tabs nav-justified">
+            <li class="nav-item ">
+                <a class="nav-link active text-dark lead" data-toggle="tab" href="#play">Play</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark lead" data-toggle="tab" href="#create">Create New Post</a>
+            </li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane bg-white fade show active" id="play">
+                <div class="media border p-3">
+                    <br>
+                    <br>
+
+                    <div class="display-4 text-center">Haha, don't forget to log in first..
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane bg-white fade" id="create">
+                <div class="media border p-3">
+                    <br>
+                    <br>
+                    <div class="display-4 text-center">Haha, don't forget to log in first..
+                    </div>
+                </div>
+
             </div>
         </div>
     {% endif %}
